added why choose us

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </section>
 
 
-  </section>
+
   <!-- condition part -->
   <div class="container">
     <div class="text-section">
@@ -75,12 +75,14 @@
       <img src="images/mountain.png" alt="Mountain Image">
     </div>
   </div>
+
+
   <!-- destination part -->
   <div class="text">
     <h2>Choose your destination</h2>
     <p>Please choose your destination & travelling the place</p>
   </div>
-  <div class="container">
+  <div class="container-p">
 
     <div class="destination">
       <img src="images/maldives.png" alt="Maldives">
@@ -108,49 +110,53 @@
     </div>
     <div class="destination-vertical">
       <img src="images/bandarban (2).png" alt="Bandarban">
-      <div class="label-text">Bandarban</div>
+      <div class="label">Bandarban</div>
     </div>
   </div>
 
   <!-- /* why choose us  */ -->
 
-  <section class="features">
+  <main class="features">
     <div class="feature-content">
-      <h3 class="feature-content-title">Why Choose Us </h3>
+      <h3>Why Choose Us </h3>
       <p>Choose us for a seamless blend of expertise and dedication, delivering unparalleled solutions
         tailored to your needs.</p>
     </div>
     <div class="card">
-      <img src="images/hotel (1).png">
-      <h4>Handpiced Hotels</h4>
+      <div class="card1">
+        <img src="images/hotel (1).png">
+        <h4>Handpicked Hotels</h4>
+        <p class="text-light-gray"> There are many variations of passages of Lorem Ipsum available, but the majority
+          have suffered alteration in some form, by injected humour, or randomized</p>
+      </div>
+      <div class="card2">
+        <img src="images/support.png">
+        <h4>world class services</h4>
+        <p class="text-light-gray"> There are many variations of passages of Lorem Ipsum available, but the majority
+          have suffered alteration in some form, by injected humour, or randomized</p>
+      </div>
+      <div class="card3">
+        <img src="images/coupon.png">
+        <h4>Best price Guarantee</h4>
+        <p class="text-light-gray"> There are many variations of passages of Lorem Ipsum available, but the majority
+          have suffered alteration in some form, by injected humour, or randomized</p>
+      </div>
+    </div>
 
-      <p class="text-light-gray"> There are many variations of passages of Lorem Ipsum available, but the majority
-        have suffered alteration in some form, by injected humour, or randomized</p>
-    </div>
-    <div class="card">
-      <img src="images/support.png">
-      <h4>world class services</h4>
-      <p class="text-light-gray"> There are many variations of passages of Lorem Ipsum available, but the majority
-        have suffered alteration in some form, by injected humour, or randomized</p>
-    </div>
-    <div class="card">
-      <img src="images/coupon.png">
-      <h4>Best price Guarantee</h4>
-      <p class="text-light-gray"> There are many variations of passages of Lorem Ipsum available, but the majority
-        have suffered alteration in some form, by injected humour, or randomized</p>
-    </div>
+  </main>
 
-  </section>
+
   <!-- simple perfect place -->
   <div class="container1">
     <div class="left">
       <h1>A Simple Perfect Place To Get Lost</h1>
-      <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis
-        dignissim adipiscing quis.</p>
+      <p>Here are certain countries round the world where its almost impossible to get lost, in terms of being stranded
+        in the wilderness I mean.</p>
       <ul>
-        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.
-        </li>
-        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.
+        <li>Most of Australia’s population is located around the east side of the country where there’s more fertile
+          land. The western side of the country is home to a huge expanse of desert.</li>
+
+        <li>The biggest country on earth also happens to be home to the biggest expanse of wilderness on earth, Russia.
         </li>
       </ul>
       <button>See More</button>
